<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.itshareplus.googlemapdemo.MainActivity"
    android:background="#c4f5ff"
    android:clickable="false">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/only_logo" />

    <Button
        android:background="@drawable/buttons"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/mapButton"
        android:textSize="15sp"
        android:id="@+id/mapButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textAllCaps="false"
        android:layout_marginTop="100dp"
        android:textColor="#0047ab"
        android:onClick="setupMapButton" />

    <Button
        android:background="@drawable/buttons"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="15sp"
        android:id="@+id/buildingButton"
        android:layout_below="@id/mapButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:textColor="#0047ab"
        android:onClick="setupSearchButton" />

    <Button
        android:background="@drawable/buttons"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/aboutButton"
        android:textSize="15sp"
        android:id="@+id/aboutButton"
        android:layout_below="@+id/buildingButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:textColor="#0047ab"
        android:onClick="setupAboutButton" />

    <Button
        android:background="@drawable/buttons"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/helpButton"
        android:textSize="15sp"
        android:id="@+id/helpButton"
        android:layout_below="@+id/aboutButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:textColor="#0047ab"
        android:onClick="setupHelpButton" />

</RelativeLayout>
