<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#c4f5ff" >


    <EditText
        android:textSize="20dp"
        android:textColor="#01337a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Help"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:id="@+id/editText2"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentLeft="true" />

    <EditText
        android:textSize="15sp"
        android:textColor="#01337a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:text="@string/bon_42_631_28_87"
        android:layout_below="@+id/editText2"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/editText5" />

    <EditText
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:textColor="#01337a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:text="@string/our_group_email"
        android:layout_below="@+id/editText4"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_alignLeft="@+id/editText5"/>

    <EditText
        android:textSize="15sp"
        android:textColor="#01337a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="8"
        android:id="@+id/editText4"
        android:text="@string/bon_adm_p_lodz_pl"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/editText5"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <EditText
        android:textSize="15sp"
        android:textColor="#01337a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText5"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:text="@string/noway"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />




    <EditText
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textColor="#01337a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText8"
        android:text="@string/how_to_navigate"
        android:layout_below="@+id/editText5"
        android:layout_alignParentStart="true"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_alignParentLeft="true" />

    <EditText
        android:textSize="15sp"
        android:textColor="#01337a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText9"
        android:layout_below="@+id/editText8"
        android:layout_alignParentStart="true"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="To use our application just simply tap the option you want. In 'Map' choose the building you want and then tap 'Find path' to see the best route from one place to another. "
        android:layout_alignParentLeft="true" />
</RelativeLayout>
